# starsector

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: deltatest.rs  edit.rs  tester.rs
src/: arena.rs  emit.rs  errors.rs  iter.rs  lib.rs  orgize_util.rs  ropeext.rs  tree.rs
src/headline/: builder.rs  mod.rs  parser.rs  timestamp.rs  value.rs
src/parser/: headline.rs  mod.rs  structure.rs  timestamp.rs
tests/: lib.rs  structure.rs
tests/headline/: build_valid.rs  fuzz.rs  mod.rs
