[package]
name = "starsector"
version = "1.0.0"
authors = ["Alex Roper <alex@aroper.net>"]
edition = "2018"
description = "Org mode structural parser/emitter with an emphasis on modularity and avoiding edits unrelated to changes."
license = "MIT"
repository = "https://github.com/calmofthestorm/starsector"
readme = "README.md"
keywords = ["orgmode", "parser", "emacs"]

[features]
default = ["headline-parser", "orgize-integration"]

# Parses and emits keywords, tags, priority, comment, and title.
headline-parser = ["regex", "lazy_static", "nom", "chrono"]

# Uses Orgize to parse the properties and planning line.
orgize-integration = ["orgize", "headline-parser", "indexmap"]

[dependencies]
hex = "0"
indexmap = { version = "1", optional = true}
indextree = "4"
iobuffer = "0"
itertools = "0"
lazy_static = { version = "1", optional = true}
log = "0"
memchr = "2"
nom = { version = "5", optional = true }
orgize = { version = "0", optional = true, features = ["chrono", "indexmap"]}
rand = "0.7.2"
regex = {version = "1", optional = true}
ropey = "1"
chrono = { version = "0", optional = true }

[dev-dependencies]
orgize = { version = "0", features = ["chrono", "indexmap"]}
rand = "0"
walkdir = "2"

[[example]]
name = "deltatest"
test = true

[[example]]
name = "tester"
test = true
